--- a/package.json
+++ b/package.json
@@ -5,20 +5,51 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --no-fix",
+    "test:unit": "vue-cli-service test:unit",
+    "inspect": "vue-cli-service inspect --mode production --verbose"
   },
   "dependencies": {
+    "@mdi/font": "6.6.96",
+    "axios": "0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "dayjs": "1.11.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "firebase": "9.7.0",
+    "highcharts": "10.0.0",
+    "highcharts-vue": "1.4.0",
+    "lodash-core": "4.17.19",
+    "numeral": "2.0.6",
+    "uuid": "8.3.2",
+    "vue": "^2.6.14",
+    "vue-grid-layout": "2.3.7",
+    "vue-router": "3.1.6",
+    "vuetify": "2.2.19",
+    "vuetify-confirm": "2.0.6",
+    "vuex": "3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "5.0.0",
+    "@vue/cli-plugin-unit-jest": "5.0.0",
+    "@vue/cli-plugin-vuex": "5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "@vue/test-utils": "1.0.0",
+    "@vue/vue2-jest": "27.0.0",
+    "eslint": "8.2.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-vue": "8.7.1",
+    "flush-promises": "1.0.2",
+    "moxios": "0.4.0",
+    "node-sass": "7.0.1",
+    "postcss": "8.4.13",
+    "sass": "1.51.0",
+    "sass-loader": "12.6.0",
+    "vue-cli-plugin-vuetify": "2.0.5",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -28,7 +59,8 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:prettier/recommended"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
