--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "inspect": "vue-cli-service inspect --mode production --verbose"
   },
   "dependencies": {
-    "@mdi/font": "6.6.96",
     "core-js": "^3.8.3",
     "dayjs": "1.11.1",
     "firebase": "9.7.0",
@@ -38,16 +37,18 @@
     "@vue/test-utils": "1.0.0",
     "@vue/vue2-jest": "27.0.0",
     "eslint": "8.2.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-vue": "8.7.1",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-vue": "8.7.1",
     "flush-promises": "1.0.2",
+    "lodash-webpack-plugin": "0.11.6",
     "moxios": "0.4.0",
     "node-sass": "7.0.1",
     "postcss": "8.4.13",
     "sass": "1.51.0",
     "sass-loader": "12.6.0",
+    "vue-cli-plugin-compression": "1.2.0",
     "vue-cli-plugin-vuetify": "2.0.5",
     "vue-template-compiler": "^2.6.14"
   },
